devops/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudbridge-platform-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /api/main(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: platform-main
            port:
              number: 4000
      - path: /api/menu(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: platform-menu
            port:
              number: 4100
